syntax = "proto3";

option csharp_namespace = "UserManagementGrpcService";

import "google/protobuf/timestamp.proto";

package UserManagementGrpcService.v1;

// The user detail service definition.
service UserDetailServices {
  rpc UserDetailCreate (UserDetailCreateRequest) returns (UserDetailCreateResponse);
  rpc UserDetailGet (UserDetailGetRequest) returns (UserDetailGetResponse);
  rpc UserDetailSearch (UserDetailSearchRequest) returns (UserDetailSearchResponse);
  rpc UserDetailUpdate (UserDetailUpdateRequest) returns (UserDetailUpdateResponse);
}

message UserDetailCreateRequest {
  UserDetailDto userDetail = 1;
}

message UserDetailCreateResponse {
    UserDetailDto userDetail = 1;
}

message UserDetailUpdateRequest {
  UserDetailDto userDetail = 1;
}

message UserDetailUpdateResponse {
    UserDetailDto userDetail = 1;
}

message UserDetailGetRequest {
  string userDetailId = 1;
}

message UserDetailGetResponse {
    UserDetailDto userDetail = 1;
}

message UserDetailSearchRequest {
    repeated string userIds = 1;
}

message UserDetailSearchResponse {
    repeated UserDetailDto posts = 1;
}

message UserDetailDto {
	string userDetailId = 1;
    string emailAddress = 2;
    string externalReferenceId = 3;
    string displayName = 4;
    string imageId = 5;
    google.protobuf.Timestamp created = 6;
    google.protobuf.Timestamp updated = 7;
}